--- a/Aier360/Controllers/校园/校园动态/Dynamic.storyboard
+++ b/Aier360/Controllers/校园/校园动态/Dynamic.storyboard
@@ -96,10 +96,73 @@
             </objects>
             <point key="canvasLocation" x="732" y="448"/>
         </scene>
+        <!--Select Location View Controller-->
+        <scene sceneID="cZ5-Cj-jmE">
+            <objects>
+                <viewController storyboardIdentifier="ZXSelectLocationViewController" id="BWr-bL-2QR" customClass="ZXSelectLocationViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="g8E-Hf-BVC"/>
+                        <viewControllerLayoutGuide type="bottom" id="Fgy-PT-7HD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ziW-iP-pJQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Hx3-pe-W4L">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="lO8-GQ-Bjh" imageView="jHe-5o-Jmq" rowHeight="55" style="IBUITableViewCellStyleDefault" id="70R-yZ-I3D">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="70R-yZ-I3D" id="5Ep-ce-Nyr">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lO8-GQ-Bjh">
+                                                    <rect key="frame" x="40" y="0.0" width="545" height="54"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="dynamic_ic_location" id="jHe-5o-Jmq">
+                                                    <rect key="frame" x="15" y="20" width="10" height="13"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </imageView>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BWr-bL-2QR" id="iZS-Pk-Z53"/>
+                                    <outlet property="delegate" destination="BWr-bL-2QR" id="bMB-oy-FrP"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Hx3-pe-W4L" secondAttribute="trailing" id="C6T-hW-xBX"/>
+                            <constraint firstItem="Fgy-PT-7HD" firstAttribute="top" secondItem="Hx3-pe-W4L" secondAttribute="bottom" id="DeS-Y9-iMk"/>
+                            <constraint firstItem="Hx3-pe-W4L" firstAttribute="leading" secondItem="ziW-iP-pJQ" secondAttribute="leading" id="If9-ay-n0E"/>
+                            <constraint firstItem="Hx3-pe-W4L" firstAttribute="top" secondItem="g8E-Hf-BVC" secondAttribute="bottom" id="rxZ-hd-td2"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Hx3-pe-W4L" id="Lbg-tl-D9E"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dMl-U2-onV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1434" y="448"/>
+        </scene>
     </scenes>
     <resources>
         <image name="announcement_teacherpick_bg" width="16" height="16"/>
         <image name="announcement_teacherpick_select" width="11" height="11"/>
+        <image name="dynamic_ic_location" width="10" height="13"/>
         <image name="head_default" width="149" height="149"/>
     </resources>
 </document>
