--- a/Aier360/Controllers/校园/校园动态/Dynamic.storyboard
+++ b/Aier360/Controllers/校园/校园动态/Dynamic.storyboard
@@ -96,6 +96,71 @@
             </objects>
             <point key="canvasLocation" x="732" y="448"/>
         </scene>
+        <!--Select Dynamic Type View Controller-->
+        <scene sceneID="2jW-2Y-Cz9">
+            <objects>
+                <viewController storyboardIdentifier="ZXSelectDynamicTypeViewController" id="TYc-ZV-4i1" customClass="ZXSelectDynamicTypeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QuW-lU-PvA"/>
+                        <viewControllerLayoutGuide type="bottom" id="Epp-dP-ymd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Upu-Hy-mAZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KkR-AO-vfw">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="EYd-h2-a9s" detailTextLabel="MBd-We-Iug" style="IBUITableViewCellStyleSubtitle" id="n6N-dY-CjD">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n6N-dY-CjD" id="Ehr-xi-zEd">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EYd-h2-a9s">
+                                                    <rect key="frame" x="15" y="10" width="32" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="MBd-We-Iug">
+                                                    <rect key="frame" x="15" y="30" width="41" height="14"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                    <color key="textColor" red="0.63137254901960782" green="0.61568627450980395" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="TYc-ZV-4i1" id="PgB-8S-Nd9"/>
+                                    <outlet property="delegate" destination="TYc-ZV-4i1" id="YZu-Pj-449"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Epp-dP-ymd" firstAttribute="top" secondItem="KkR-AO-vfw" secondAttribute="bottom" id="I8p-7B-hJC"/>
+                            <constraint firstItem="KkR-AO-vfw" firstAttribute="top" secondItem="QuW-lU-PvA" secondAttribute="bottom" id="LSp-en-AzG"/>
+                            <constraint firstItem="KkR-AO-vfw" firstAttribute="leading" secondItem="Upu-Hy-mAZ" secondAttribute="leading" id="Shf-tQ-GK4"/>
+                            <constraint firstAttribute="trailing" secondItem="KkR-AO-vfw" secondAttribute="trailing" id="TfH-PZ-eFd"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="KkR-AO-vfw" id="Ppj-KD-rhg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PVK-Pc-gKa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="732" y="1140"/>
+        </scene>
         <!--Select Location View Controller-->
         <scene sceneID="cZ5-Cj-jmE">
             <objects>
