--- a/Aier360/Controllers/发现/Discovery.storyboard
+++ b/Aier360/Controllers/发现/Discovery.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -71,10 +70,10 @@
             </objects>
             <point key="canvasLocation" x="-50" y="1054"/>
         </scene>
-        <!--Discovery View Controller-->
+        <!--Data Source-->
         <scene sceneID="EGa-Bk-nJO">
             <objects>
-                <viewController storyboardIdentifier="ZXDiscoveryViewController" id="Uyj-Ou-RRt" customClass="ZXDiscoveryViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZXDiscoveryViewController" automaticallyAdjustsScrollViewInsets="NO" id="Uyj-Ou-RRt" customClass="ZXDiscoveryViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="je1-4l-Pjf"/>
                         <viewControllerLayoutGuide type="bottom" id="5ef-7b-kCB"/>
@@ -83,68 +82,43 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="52" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hCS-4M-auh">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="obY-Mm-7yh">
+                                <rect key="frame" x="0.0" y="44" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="8QI-y8-wQo" customClass="ZXMenuCell">
-                                        <rect key="frame" x="0.0" y="22" width="600" height="52"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8QI-y8-wQo" id="uDX-oB-9Rg">
-                                            <rect key="frame" x="0.0" y="0.0" width="567" height="51"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dynamic_ic_parent" translatesAutoresizingMaskIntoConstraints="NO" id="TLB-F0-oPD">
-                                                    <rect key="frame" x="15" y="14" width="23" height="23"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="23" id="ehQ-Lc-6fd"/>
-                                                        <constraint firstAttribute="width" constant="23" id="fjV-ht-oan"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="好友动态" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2d-kJ-eTI">
-                                                    <rect key="frame" x="46" y="16" width="513" height="21"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="1eZ-h4-BCt"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="leading" secondItem="uDX-oB-9Rg" secondAttribute="leading" constant="15" id="OdD-Os-Nm2"/>
-                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="trailing" secondItem="uDX-oB-9Rg" secondAttribute="trailingMargin" id="ey1-8K-aUc"/>
-                                                <constraint firstItem="TLB-F0-oPD" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="top" constant="14" id="fba-PJ-crd"/>
-                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="leading" secondItem="TLB-F0-oPD" secondAttribute="trailing" constant="8" id="itL-fQ-c2E"/>
-                                                <constraint firstItem="g2d-kJ-eTI" firstAttribute="top" secondItem="uDX-oB-9Rg" secondAttribute="topMargin" constant="8" id="nRT-FO-VR4"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
-                                        <inset key="separatorInset" minX="45" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <connections>
-                                            <outlet property="logoImage" destination="TLB-F0-oPD" id="GSP-8K-0Mw"/>
-                                            <outlet property="titleLabel" destination="g2d-kJ-eTI" id="e0b-y5-O69"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xrn-Kd-UTw" customClass="TopBarView">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="be9-cc-fXW"/>
+                                </constraints>
                                 <connections>
-                                    <outlet property="dataSource" destination="Uyj-Ou-RRt" id="hiR-V0-EhR"/>
-                                    <outlet property="delegate" destination="Uyj-Ou-RRt" id="IOC-NY-f5X"/>
+                                    <outlet property="dataSource" destination="Uyj-Ou-RRt" id="XDf-U7-oIj"/>
+                                    <outlet property="delegate" destination="Uyj-Ou-RRt" id="yqP-4Z-AD3"/>
                                 </connections>
-                            </tableView>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FhR-Cp-Uhl">
+                                <rect key="frame" x="562" y="11" width="23" height="22"/>
+                                <state key="normal" image="dynamic_bt_release_green"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="hCS-4M-auh" firstAttribute="leading" secondItem="9Ve-Ue-6Ux" secondAttribute="leadingMargin" constant="-16" id="3Hg-Ed-dvk"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="hCS-4M-auh" secondAttribute="trailing" constant="-16" id="5d2-Mw-A3x"/>
-                            <constraint firstItem="hCS-4M-auh" firstAttribute="top" secondItem="je1-4l-Pjf" secondAttribute="bottom" id="VwM-d6-AEI"/>
-                            <constraint firstItem="5ef-7b-kCB" firstAttribute="top" secondItem="hCS-4M-auh" secondAttribute="bottom" id="e08-HK-OLe"/>
+                            <constraint firstAttribute="trailing" secondItem="xrn-Kd-UTw" secondAttribute="trailing" id="8cR-of-R0F"/>
+                            <constraint firstItem="obY-Mm-7yh" firstAttribute="top" secondItem="xrn-Kd-UTw" secondAttribute="bottom" id="KuO-VC-QaJ"/>
+                            <constraint firstAttribute="trailing" secondItem="FhR-Cp-Uhl" secondAttribute="trailing" constant="15" id="OIe-eK-WOG"/>
+                            <constraint firstItem="FhR-Cp-Uhl" firstAttribute="centerY" secondItem="xrn-Kd-UTw" secondAttribute="centerY" id="YbD-l5-kgo"/>
+                            <constraint firstItem="xrn-Kd-UTw" firstAttribute="top" secondItem="je1-4l-Pjf" secondAttribute="bottom" id="Zwc-Ba-a9u"/>
+                            <constraint firstItem="xrn-Kd-UTw" firstAttribute="leading" secondItem="9Ve-Ue-6Ux" secondAttribute="leading" id="lKp-jP-Nfc"/>
+                            <constraint firstAttribute="trailing" secondItem="obY-Mm-7yh" secondAttribute="trailing" id="ncz-7O-ENJ"/>
+                            <constraint firstItem="5ef-7b-kCB" firstAttribute="top" secondItem="obY-Mm-7yh" secondAttribute="bottom" id="nvd-ze-3hH"/>
+                            <constraint firstItem="obY-Mm-7yh" firstAttribute="leading" secondItem="9Ve-Ue-6Ux" secondAttribute="leading" id="wc2-St-SN2"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="4Ps-g2-Bca"/>
                     <connections>
-                        <outlet property="tableView" destination="hCS-4M-auh" id="Ghz-zf-fO3"/>
+                        <outlet property="contentView" destination="obY-Mm-7yh" id="7p3-qQ-0Xf"/>
+                        <outlet property="topBarView" destination="xrn-Kd-UTw" id="xqs-zO-Fsn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hhd-0k-WEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -446,9 +420,9 @@
     <resources>
         <image name="bt_comment_n" width="19" height="18"/>
         <image name="dynamic_bt_more_gray" width="18" height="4"/>
+        <image name="dynamic_bt_release_green" width="23" height="18"/>
         <image name="dynamic_ic_fav" width="19" height="19"/>
         <image name="dynamic_ic_faved" width="19" height="17"/>
-        <image name="dynamic_ic_parent" width="23" height="23"/>
         <image name="mine_sexage_female" width="27" height="13"/>
         <image name="商业:服务业:个体经营" width="13" height="13"/>
     </resources>
